fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,7 @@ body {
   min-height: 100vh;
   flex-direction: column;
 }
+
+nav {
+  margin-bottom: 20px;
+}
